[package]
name = "doto"
version = "0.1.0"
edition = "2021"
author = "Tom Hill (hill.xyz)"
about = "doto todos is a simple, day-to-day todo list manager."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.3.0", features = ["derive"] }