[package]
name = "doto"
version = "0.1.0"
edition = "2021"
author = "Tom Hill (hill.xyz)"
about = "doto todos is a simple, day-to-day todo list manager."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.3.0", features = ["derive"] }
dirs = "5.0.1"
indicatif = "0.17.5"
open = "4.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.12", features = ["full"] }
